--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -306,7 +306,7 @@
     "string": "progress"
   },
   "audiobookList__heading": {
-    "string": "All Audiobooks"
+    "string": "Books"
   },
   "bibleBook__backToChapter": {
     "string": "Back to Chapter Info"
@@ -359,7 +359,7 @@
     "string": "All Blog Posts"
   },
   "books__title": {
-    "string": "All Audiobooks"
+    "string": "Books"
   },
   "buttonShareRecording__emailSubject": {
     "string": "{title} by {presenters}"
@@ -427,6 +427,9 @@
   },
   "cardSequence_chaptersLabel": {
     "string": "{count} chapters"
+  },
+  "cardSequence_egwAudiobookType": {
+    "string": "ELLEN G. WHITE"
   },
   "cardSequence_readByLabel": {
     "string": "Read By {name}"
@@ -744,6 +747,12 @@
     "comment": "duration minutes",
     "string": "{minutes}m"
   },
+  "egwAudiobookList__heading": {
+    "string": "Ellen G. White"
+  },
+  "egwbooks__title": {
+    "string": "Ellen G. White"
+  },
   "embed__partInfo": {
     "string": "Part {index} of {count}"
   },
@@ -817,6 +826,9 @@
   },
   "header__navItemCollections-conferences": {
     "string": "Conferences"
+  },
+  "header__navItemCollections-egwbooks": {
+    "string": "Ellen G. White"
   },
   "header__navItemCollections-presenters": {
     "string": "Presenters"
@@ -1795,7 +1807,7 @@
     "string": "Sponsor"
   },
   "organismSection__audiobooksHeading": {
-    "string": "Audiobooks"
+    "string": "Discover Books"
   },
   "organismSection__audiobooksNext": {
     "string": "Next audiobooks"
@@ -1811,6 +1823,15 @@
   },
   "organismSection__bibleBooksPrevious": {
     "string": "Previous Bible books"
+  },
+  "organismSection__egwAudiobooksHeading": {
+    "string": "Discover Ellen G. White"
+  },
+  "organismSection__egwAudiobooksNext": {
+    "string": "Next EGW audiobooks"
+  },
+  "organismSection__egwAudiobooksPrevious": {
+    "string": "Previous EGW audiobooks"
   },
   "organismSection_presentersHeading": {
     "string": "Presenters"
