updated E.G.W to EGW

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -2299,7 +2299,7 @@
     "string": "See All Matching Conferences"
   },
   "search__egwbooksHeading": {
-    "string": "E.G.W"
+    "string": "EGW"
   },
   "search__egwbooksSeeAll": {
     "string": "See All Matching Ellen White Audiobooks"
