--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -246,7 +246,7 @@
 	"about__spirit12": {
 
 
-		"string": "Os materiais devem vir de oradores ligados a organizações ou grupos que defendem e representam o “Espirito do AudioVerse” descrito acima. Que eles sejam Adventistas do Sétimo Dia com uma boa reputação."
+		"string": "Os materiais devem vir de Palestrantes ligados a organizações ou grupos que defendem e representam o “Espirito do AudioVerse” descrito acima. Que eles sejam Adventistas do Sétimo Dia com uma boa reputação."
 
 
 	},
@@ -1194,7 +1194,7 @@
 	"buttonShareRecording__emailSubject": {
 
 
-		"string": "{título} por {oradores}"
+		"string": "{título} por {Palestrantes}"
 
 
 	},
@@ -1404,7 +1404,7 @@
 	"cardSequence_scriptureSongsType": {
 
 
-		"string": "Canções das Escrituras"
+		"string": "Canções Biblicas"
 
 
 	},
@@ -1515,7 +1515,7 @@
 	"cardSong_sequenceLabel": {
 
 
-		"string": "Canções das Escrituras"
+		"string": "Canções Biblicas"
 
 
 	},
@@ -1608,7 +1608,7 @@
 	"collectionDetail__presentersAllLabel": {
 
 
-		"string": "Ver todos Oradores"
+		"string": "Ver todos Palestrantes"
 
 
 	},
@@ -1620,7 +1620,7 @@
 		"comment": "Coleção detalhada da etiqueta dos alto-falantes",
 
 
-		"string": "Oradores"
+		"string": "Palestrantes"
 
 
 	},
@@ -1704,7 +1704,7 @@
 	"collectionPresenterssDetail__heading": {
 
 
-		"string": "Todos Oradores"
+		"string": "Todos Palestrantes"
 
 
 	},
@@ -1776,7 +1776,7 @@
 	"conferencesPresenters__title": {
 
 
-		"string": "Oradores do {conferenceName}"
+		"string": "Palestrantes do {conferenceName}"
 
 
 	},
@@ -2010,7 +2010,7 @@
 	"discoverCollections_presentersHeading": {
 
 
-		"string": "Oradores"
+		"string": "Palestrantes"
 
 
 	},
@@ -2019,7 +2019,7 @@
 	"discoverCollections_scriptureSongsHeading": {
 
 
-		"string": "Canções das Escrituras"
+		"string": "Canções Biblicas"
 
 
 	},
@@ -2493,7 +2493,7 @@
 	"header__navItemCollections-presenters": {
 
 
-		"string": "Oradores"
+		"string": "Palestrantes"
 
 
 	},
@@ -2502,7 +2502,7 @@
 	"header__navItemCollections-songs": {
 
 
-		"string": "Canções das Escrituras"
+		"string": "Canções Biblicas"
 
 
 	},
@@ -2727,7 +2727,7 @@
 	"header__navItemPresenters": {
 
 
-		"string": "Oradores"
+		"string": "Palestrantes"
 
 
 	},
@@ -5925,7 +5925,7 @@
 	"presentersList__title": {
 
 
-		"string": "Todos Oradores"
+		"string": "Todos Palestrantes"
 
 
 	},
@@ -5961,7 +5961,7 @@
 	"presenters__title": {
 
 
-		"string": "Todos Oradores"
+		"string": "Todos Palestrantes"
 
 
 	},
@@ -6600,7 +6600,7 @@
 	"search__personsHeading": {
 
 
-		"string": "Oradores"
+		"string": "Palestrantes"
 
 
 	},
@@ -6609,7 +6609,7 @@
 	"search__personsSeeAllMatching": {
 
 
-		"string": "Ver todos Oradores correspondentes"
+		"string": "Ver todos Palestrantes correspondentes"
 
 
 	},
@@ -6717,7 +6717,7 @@
 	"sequenceType__musicTrackTitle": {
 
 
-		"string": "Canções das Escrituras"
+		"string": "Canções Biblicas"
 
 
 	},
@@ -6969,7 +6969,7 @@
 	"songBook__title": {
 
 
-		"string": "{livro} Canções das Escrituras"
+		"string": "{livro} Canções Biblicas"
 
 
 	},
@@ -7023,7 +7023,7 @@
 	"songsListPage__title": {
 
 
-		"string": "Canções das Escrituras"
+		"string": "Canções Biblicas"
 
 
 	},
@@ -7278,7 +7278,7 @@
 	"storyAlbums__title": {
 
 
-		"string": "Canções das Escrituras"
+		"string": "Canções Biblicas"
 
 
 	},
@@ -7398,7 +7398,7 @@
 	},
 
 	"search__presentersHeading": {
-		"string": "Oradores"
+		"string": "Palestrantes"
 	},
 	"search__musicHeading": {
 		"string": "Musica"
