--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1593,32 +1593,44 @@
     "comment": "download button menu video heading",
     "string": "Video Downloads"
   },
-  "molecule-buttonGuest__downloadQuality": {
-    "string": "Adjusting download quality"
+  "molecule-buttonGuest__Download": {
+    "string": "Download content for offline access"
   },
   "molecule-buttonGuest__label": {
-    "string": "Continue as guest"
+    "string": "Why Sign Up?"
   },
   "molecule-buttonGuest__modalButtonLabelCreateAccount": {
-    "string": "Create account"
+    "string": "Sign Up"
   },
-  "molecule-buttonGuest__modalButtonLabelGuest": {
-    "string": "Continue as guest"
+  "molecule-buttonGuest__modalButtonLabelGuestSkip2": {
+    "string": "Skip"
   },
   "molecule-buttonGuest__modalButtonLabelLogIn": {
     "string": "Log in"
   },
+  "molecule-buttonGuest__modalButtonLabelSkip": {
+    "string": "Skip"
+  },
   "molecule-buttonGuest__modalParagraph": {
-    "string": "You'll be missing out on some key features without an account, like:"
+    "string": "Free user accounts help us provide you with a personal, customized experience, giving you access to mobile downloads, saving, and more. In addition, accounts help us know how users use the app, which helps us know how to improve the app. Please consider signing up or logging in to help our mission of sharing sound doctrine"
+  },
+  "molecule-buttonGuest__modalParagraph2": {
+    "string": "With a free account,you can"
   },
   "molecule-buttonGuest__modalTitle": {
-    "string": "Continue as guest?"
+    "string": "Why Sign Up?"
   },
-  "molecule-buttonGuest__saving": {
-    "string": "Saving to your library"
+  "molecule-buttonGuest__modalTitle2": {
+    "string": "Are you sure?"
   },
-  "molecule-buttonGuest__syncing": {
-    "string": "Syncing across your devices"
+  "molecule-buttonGuest__requests": {
+    "string": "Avoid annoying login requests"
+  },
+  "molecule-buttonGuest__save": {
+    "string": "Save your content to listen later"
+  },
+  "molecule-buttonGuest__sync": {
+    "string": "Pick up where you left off across devices"
   },
   "molecule-buttonShareRecording__audioEmbedLabel": {
     "string": "Audio Embed Code"
