--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1627,7 +1627,10 @@
     "string": "Skip"
   },
   "molecule-buttonGuest__modalParagraph": {
-    "string": "Free user accounts help us provide you with a personal, customized experience, giving you access to mobile downloads, saving, and more. In addition, accounts help us know how users use the app, which helps us know how to improve the app. Please consider signing up or logging in to help our mission of sharing sound doctrine"
+    "string": "Free user accounts help us provide you with a personal, customized experience, giving you access to mobile downloads, saving, and more. In addition, accounts help us know how users use the app, which helps us know how to improve the app."
+  },
+  "molecule-buttonGuest__modalParagraph1-2": {
+    "string": "Please consider signing up or logging in to help our mission of sharing sound doctrine."
   },
   "molecule-buttonGuest__modalParagraph2": {
     "string": "With a free account,you can"
